1. update resume content & layout 2. fix wrapper css

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Brian Wu's website powered by React."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -48,7 +48,7 @@
       }(window.location))
     </script>
     <!-- End Single Page Apps for GitHub Pages -->
-    <title>React App</title>
+    <title>Brian Wu</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
